Add support for pipeline preparation in PRs. (#1104)
This pipeline adds a template to support in-situ pipeline generation from within a pull request. The model I'm going with here is that we have a common template in ```azure-sdk-tools``` under ```eng/common``` which we sync using the normal method. This template takes a repository name (defaulted), prefix and the various options for the public, internal, and test pipelines.

Then ... in each repository which supports this method of pipeline preparation (not required for iOS and C++ for example) we have another YAML file (```eng/pipelines/pipeline-preparation.yml```) which uses that template and injects any repo specific configuraiton such as the variable groups which are associated with the pipeline.

Each repo will have its own ```prepare-pipelines``` pipeline and users will be able to issue the following command to setup any missing pipelines:

```
/azp run prepare-pipelines
```

These are internal pipelines, which can be triggered only by team members with a PR comment, and they necessarily have access to the DevOps PAT. To validate that this will all hang together I did the following:

1. [Created a feature branch](https://github.com/Azure/azure-sdk-for-java/tree/feature/prepare-pipelines) on the Java repo which combines the ```eng/common``` changes from this PR, with the repo specific ```prepare-pipeline.yml``` file.
2. [Created a pipeline definition](https://dev.azure.com/azure-sdk/internal/_build?definitionId=2158&_a=summary) which points to the repo specific ```prepare-pipeline.yml``` file and set properties appropriately.
3. [Created a PR](https://github.com/Azure/azure-sdk-for-java/pull/16481) with a new service directory which tests the process end to end.

This PR lifts the changes from the feature branch that need to go into ```eng/common```. Once it is the ```eng/common``` changes from the feature branch will be removed and I'll submit another PR to add the repo-specific pipeline.

I

--- a/eng/pipelines/pipeline-generation-single.yml
+++ b/eng/pipelines/pipeline-generation-single.yml
@@ -23,12 +23,12 @@ jobs:
     vmImage: 'windows-2019'
   steps:
   - checkout: none
-  - template: templates/steps/install-pipeline-generation.yml
+  - template: /eng/common/pipelines/templates/steps/install-pipeline-generation.yml
   - script: |
       git clone --filter=blob:none --branch $(Branch) https://$(azuresdk-github-pat)@github.com/azure/$(RepositoryName) $(Pipeline.Workspace)/$(RepositoryName)
     displayName: 'Clone repository: $(RepositoryName)'
   - script: >
-      pipeline-generator
+      $(Pipeline.Workspace)/pipeline-generator/pipeline-generator
       --organization $(DevOpsOrg)
       --project $(DevOpsProject)
       --prefix $(Prefix)
