Use a new branch for quing the TestPipeline, this should prevent chec… (#1154)
Use a new branch for queueing the TestPipeline, this should prevent template checks from showing up on `eng/common` Sync PRs.
Add step tp clean up upstream branches used during the sync run.
Add retry logic to the verify and merge stage.

--- a/eng/pipelines/eng-common-sync.yml
+++ b/eng/pipelines/eng-common-sync.yml
@@ -184,6 +184,20 @@ stages:
                         -AuthToken "$(azuresdk-github-pat)"
                       pwsh: true
 
+                  - ${{ each repo in parameters.Repos }}:
+                    - task: PowerShell@2
+                      displayName: Clean Up Sync Common Branches
+                      condition: succeeded()
+                      inputs:
+                        pwsh: true
+                        workingDirectory: $(System.DefaultWorkingDirectory)
+                        filePath: $(System.DefaultWorkingDirectory)/eng/common/scripts/Delete-RemoteBranches.ps1
+                        arguments: >
+                          -RepoOwner "Azure"
+                          -RepoName ${{ repo }}
+                          -BranchPrefix "sync-${{ parameters.DirectoryToSync }}-$(System.PullRequest.SourceBranch)-$(System.PullRequest.PullRequestNumber)"
+                          -AuthToken $(azuresdk-github-pat)
+
   - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
     - stage: CreateSync
       jobs:
