Add Invoke-DevOpsAPI.ps1, Add functions for Canceling and Listing Builds (#1161)

--- a/eng/pipelines/eng-common-sync.yml
+++ b/eng/pipelines/eng-common-sync.yml
@@ -104,6 +104,7 @@ stages:
                         -RepoOwner "Azure"
                         -RepoName "azure-sdk-tools"
                         -PullRequestNumber "$(System.PullRequest.PullRequestNumber)"
+                        -AuthToken "$(azuresdk-github-pat)"
                       pwsh: true
 
                   - ${{ each repo in parameters.Repos }}:
