Update for repo azure-libraries-for-java (#1231)
* Update for repo azure-libraries-for-java

* remove unrequired lines for sdk automation

--- a/eng/pipelines/mirror-repos.yml
+++ b/eng/pipelines/mirror-repos.yml
@@ -81,6 +81,11 @@ jobs:
               Azure/azure-cli-extensions-pr:
               azure-sdk/azure-cli-extensions:
               azure-sdk/azure-cli-extensions-pr:
+              
+          Azure/azure-libraries-for-java:
+            Branch: master
+            TargetRepos: 
+              Azure/azure-libraries-for-java-pr:
 
     - template: ./templates/steps/sync-repo-branch.yml
       parameters:
