--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -4,6 +4,7 @@ trigger: none
 
 variables:
   skipComponentGovernanceDetection: true
+  TestOptions: ''
 
 parameters:
   - name: AzureSDK_Maven_Release_Pipeline_Secrets
@@ -63,6 +64,7 @@ jobs:
           --variablegroup ${{ parameters.Release_Secrets_for_GitHubIO_Publishing }}
           --variablegroup ${{ parameters.Secrets_for_DevOps_Notification_Configuration_and_User_Resolution }}
           --variablegroup ${{ parameters.APIReview_AutoCreate_Configurations }}
+        TestOptions: '--variablegroup ${{ parameters.Secrets_for_Resource_Provisioner }}'
       Python:
         RepositoryName: azure-sdk-for-python
         Branch: master
