Support variants in test pipelines (#1311)
* Support variants in test pipelines

* Fix removed myget feed in nuget.config

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,14 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<packageSources>
-		<add key="NugetOfficialV3" value="https://api.nuget.org/v3/index.json" />
-		<add key="Local" value="tools/LocalNugetFeed" />
-		<add key="roslyn-analyzers" value="https://dotnet.myget.org/F/roslyn-analyzers/api/v3/index.json" />
-		<add key="AzArtifactsFeed" value="https://azuresdkartifacts.blob.core.windows.net/azure-sdk-tools/index.json" />
-	</packageSources>
-	
-	<config>
-		<add key="globalPackagesFolder" value="restoredPackages" />
-		<add key="RestorePackagesPath" value="restoredPackages" />
-	</config>
+  <packageSources>
+    <clear />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" />
+  </packageSources>
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>
 </configuration>
