--- a/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
@@ -7,7 +7,7 @@ stages:
     pool:
       vmImage: ubuntu-16.04
     steps:
-      - task: DotNetCoreInstaller@0
+      - task: UseDotNet@2
         displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
         inputs:
           version: '$(DotNetCoreVersion)'
