support go in apiview (#1385)
* Support Go in APIView

--- a/.azure-pipelines/apiview-sync-staging.yml
+++ b/.azure-pipelines/apiview-sync-staging.yml
@@ -5,6 +5,8 @@ parameters:
   - originals
   - codefiles
 
+variables:
+  - template: /eng/pipelines/templates/variables/globals.yml
 
 stages:
   - stage: 'Main'
