--- a/eng/pipelines/templates/steps/sync-directory.yml
+++ b/eng/pipelines/templates/steps/sync-directory.yml
@@ -70,7 +70,7 @@ steps:
 
     - task: PowerShell@2
       displayName: Queue template pipeline
-      condition: and(succeeded(), ne('${{ repo.value.definition-id }}', ''))
+      condition: and(succeeded(), ne('${{ repo.value.DefinitionId }}', ''))
       inputs:
         pwsh: true
         workingDirectory: ${{ parameters.WorkingDirectory }}
@@ -79,14 +79,14 @@ steps:
           -Organization "azure-sdk"
           -Project "internal"
           -SourceBranch "${{ parameters.UpstreamBranchName }}-ForTestPipeline"
-          -DefinitionId '${{ repo.value.definition-id }}'
+          -DefinitionId '${{ repo.value.DefinitionId }}'
           -VsoQueuedPipelines "QueuedPipelines"
           -CancelPreviousBuilds $True
           -Base64EncodedAuthToken "$(azuresdk-azure-sdk-devops-build-queuing-pat)"
 
     - task: PowerShell@2
       displayName: Queue live-test template pipeline
-      condition: and(succeeded(), ne('${{ repo.value.tests-definition-id }}', ''))
+      condition: and(succeeded(), ne('${{ repo.value.TestsDefinitionId }}', ''))
       inputs:
         pwsh: true
         workingDirectory: ${{ parameters.WorkingDirectory }}
@@ -95,7 +95,7 @@ steps:
           -Organization "azure-sdk"
           -Project "internal"
           -SourceBranch "${{ parameters.UpstreamBranchName }}-ForTestPipeline"
-          -DefinitionId '${{ repo.value.tests-definition-id }}'
+          -DefinitionId '${{ repo.value.TestsDefinitionId }}'
           -VsoQueuedPipelines "QueuedPipelines"
           -CancelPreviousBuilds $True
           -Base64EncodedAuthToken "$(azuresdk-azure-sdk-devops-build-queuing-pat)"
